--- a/Computer/System/PowerShell/注册表/值.md
+++ b/Computer/System/PowerShell/注册表/值.md
@@ -3,7 +3,8 @@
 ## 设置值
 `> Set-ItemProperty HKCU:\Software\Testkey -name "Blog" -value www.pstips.net`
 blog为默认为REG_SZ类型
-## 设置特定类型的值
+## 新建特定类型的值
+
  `> New-ItemProperty $testKey -name "Entry2" -value "123" -propertyType dword`
 其他类型：
 
@@ -15,6 +16,7 @@ blog为默认为REG_SZ类型
 - pword
 
 ## 读取值
+
 `> Get-ItemProperty HKCU:\Software\Testkey Entry3`
 
 ```powershell
