--- a/Computer/System/LinuxServer/MySQL/其他/用户与权限.md
+++ b/Computer/System/LinuxServer/MySQL/其他/用户与权限.md
@@ -1,6 +1,12 @@
-# 权限
 
-mysql> grant all privileges on *.* to 'yangxin'@'%' identified by 'yangxin123456' with grant option;
+
+## 用户
+
+建立用户`create user 'rmp'@'%' identified by 'rmpTTF1765';`
+
+修改权限`mysql> grant all privileges on *.* to 'yangxin'@'%' identified by 'yangxin123456' with grant option;`
+
+说明：
 
 
 all privileges：表示将所有权限授予给用户。也可指定具体的权限，如：SELECT、CREATE、DROP等。
