--- a/Computer/System/LinuxServer/MySQL/其他/错误.md
+++ b/Computer/System/LinuxServer/MySQL/其他/错误.md
@@ -13,3 +13,13 @@ A:my.cnf下\[mysqld]模块下添加secure\_file\_priv=‘'
 
 Q:Mysql password expired. Can't connect
 A:mysql> ALTER USER `root`@`localhost` IDENTIFIED BY 'new\_password', `root`@`localhost` PASSWORD EXPIRE NEVER;
+
+Q:ERROR 1820 (HY000): You must reset your password using ALTER USER statement before executing this statement.
+
+A:
+
+```
+mysql>alter user user() identified by "root";
+mysql>update mysql.user set authentication_string=password('sqlTTF1765') where user='root';
+```
+
