--- a/Computer/System/LinuxServer/MySQL/其他/错误.md
+++ b/Computer/System/LinuxServer/MySQL/其他/错误.md
@@ -20,6 +20,6 @@ A:
 
 ```
 mysql>alter user user() identified by "root";
-mysql>update mysql.user set authentication_string=password('sqlTTF1765') where user='root';
+mysql>update mysql.user set authentication_string=password('MyNewPass4!') where user='root';
 ```
 
