--- a/Computer/System/Windows/VPS/运行命令.md
+++ b/Computer/System/Windows/VPS/运行命令.md
@@ -6,10 +6,6 @@ http://tools.file.irybd.com/windows-proxy-init.zip
 
 cmd /k \\tsclient\windows-proxy-init\basicInit.bat **共享主机名** **代理文件下载地址**** ***主机名*** **宽带账号** **宽带密码****
 
-`cmd /k \\tsclient\D\windows-proxy-init\basicInit.bat tsclient\D http://tools.file.irybd.com/windows-proxy-init.rar suzhou17 051214182440 135790`
-
-taskkill /f /im java.exe
-
-C:\Users\Administrator\Desktop\client\start.bat
-
-.\open.vbs http://116.62.78.44:8079/ C:\users\adminsitrators\desktop\if.txt
+```
+cmd /k \\tsclient\windows-proxy-init\basicInit.bat tsclient http://tools.file.irybd.com/windows-proxy-init.rar zaozhuang02	063200417570	987654
+```
