--- a/Computer/System/Windows/工具/sysinternals/总览.md
+++ b/Computer/System/Windows/工具/sysinternals/总览.md
@@ -1,12 +1,10 @@
 # Sysinternals实用程序
 
-- 2017/05/16
+[sysinternals官方文档](https://docs.microsoft.com/zh-cn/sysinternals/)
 
-[Sysinternals套件](https://download.sysinternals.com/files/SysinternalsSuite.zip)
-整套Sysinternals实用工具汇总为一个下载。
+[Sysinternals下载链接](https://download.sysinternals.com/files/SysinternalsSuite.zip)
 
 
-一次下载即可[获得适用于Nano Server的Sysinternals套件](https://download.sysinternals.com/files/SysinternalsSuite-Nano.zip)。
 
 [AccessChk](https://docs.microsoft.com/en-us/sysinternals/downloads/accesschk)
 *v6.20（2017年11月19日）*
