--- a/Computer/System/Windows/VPS/一键初始化脚本.md
+++ b/Computer/System/Windows/VPS/一键初始化脚本.md
@@ -10,7 +10,7 @@ echo parameter error
 goto batexit 
 )
 
-echo --  S/Get Basic Info  --
+echo -----  S/Get Basic Info  -----
 set pppoename=宽带连接
 for /F %%a in ('cmd /c reg query "HKCU\Software\Microsoft\Windows\CurrentVersion\Internet Settings\Connections" ') do (
 SET b=%%a
@@ -41,6 +41,7 @@ set deskclientfolder=%desktop%\client
 set deskinitfolder=%desktop%\%proxyfile%
 
 rem 变量呼出
+echo redirect folder: %smbfolder%
 echo Download Link: %downloadlink%
 echo Default Proxy File: %proxyfileext%
 echo Proxy Hostname: %proxyhostname%
@@ -49,23 +50,21 @@ echo PPPOE Account: %account%
 echo PPPOE Password: %password%
 
 echo.
-echo ------  PPPOE  ------
-:pppoeLink
-ping 1.2.4.8 -n 1 >nul
-if %errorlevel% EQU 1 (
+echo ------  PPPOE  ------(
 rasdial %pppoename% %account% %password%
-goto pppoeLink
-) else (
-echo Connected Internet.
-)
 
 rem 如果已经下载文件
 if EXIST "%desktop%\%proxyfileext%" (
 goto rar
 )
 
+rem 如果重定向文件夹存在 %proxyfileext% ，否则下载
 echo.
-echo -- downloading %downloadlink% --
+if EXIST "\\%smbfolder%\%proxyfile%\%proxyfileext%" (
+echo -- copy file from \\%smbfolder%\%proxyfile%\%proxyfileext% --
+copy \\%smbfolder%\%proxyfile%\%proxyfileext% %desktop% /y
+) else (
+echo -- downloading file from %downloadlink% --
 cd %desktop%
 \\%smbfolder%\%proxyfile%\download.vbs %downloadlink% %desktop%\%proxyfileext%
 echo \\%smbfolder%\%proxyfile%\download.vbs %downloadlink% %proxyfileext%
@@ -75,10 +74,11 @@ explorer %downloadlink%
 echo please continue when download complete.
 pause
 )
+)
 
 :rar
 echo.
-echo ----  unrar file %proxyfileext% ----
+echo -----  unrar file %proxyfileext% -----
 rem 使用本地rar命令程序
 if EXIST "C:\Program Files\WinRAR\Rar.exe" (
     echo auto raring
@@ -88,8 +88,13 @@ rem 使用远程rar命令程序
    \\%smbfolder%\%proxyfile%\rar.exe x -t -o-p %desktop%\%proxyfileext% %desktop%
 )
 
+if NOT EXIST "%desktop%\%proxyfile%" (
+echo rar file is error.
+goto batexit
+)
+
 echo.
-echo ----  ready init client ----
+echo -----  ready init client -----
 
 echo move client to desktop
 move /Y %deskinitfolder%\client %desktop%\
@@ -105,6 +110,10 @@ regedit /s %deskinitfolder%\init_javapath.reg
 
 echo init tcp set
 regedit /s %deskinitfolder%\init_tcp.reg
+
+echo init admin$ set
+regedit /s %deskinitfolder%\init_admin_share.reg
+
 
 echo move new bat to client folder
 move /Y %deskinitfolder%\*.bat %deskclientfolder%
@@ -122,14 +131,16 @@ echo ERROR: start.bat is not exist
 if NOT EXIST "%deskclientfolder%\run.bat" (
 copy /Y \\%smbfolder%\%proxyfile%\run.bat %deskclientfolder%
 )
+
 echo.
-echo ----  init will over  ----
+echo -----  init will over  -----
 rmdir /q /s %deskinitfolder%
 erase %desktop%\%proxyfileext%
 echo mod adminsitrator'password to %adminpass%
 net user Administrator %adminpass%
 rem 关闭防火墙
 sc config mpssvc start= disabled
+sc config LanmanServer start= auto
 echo system will reboot at 0s later
 shutdown -r -t 0
 msg * everthing is ok!
