--- a/Computer/!Server/Java/进程情况查看.md
+++ b/Computer/!Server/Java/进程情况查看.md
@@ -19,5 +19,5 @@ jmap -histo:live id
 
 将内存使用情况dump到文件中
 
-`jmap -dump:live,format=b,file=filename PID `
+jmap -dump:live,format=b,file=filename PID 
 
