--- a/Computer/!Server/MySQL/其他/用户与权限.md
+++ b/Computer/!Server/MySQL/其他/用户与权限.md
@@ -6,6 +6,8 @@
 
 修改权限`mysql> grant all privileges on *.* to 'yangxin'@'%' identified by 'yangxin123456' with grant option;`
 
+更新权限`flush privileges`
+
 说明：
 
 
