--- a/Computer/!Server/Nginx/编译参数.md
+++ b/Computer/!Server/Nginx/编译参数.md
@@ -1,8 +1,29 @@
 # 编译参数
-支持php的pcre
---with-pcre
+
+## 依赖
+
+```bash
+yum -y install make zlib zlib-devel gcc-c++ libtool  openssl openssl-devel pcre pcre-devel 
+```
+
+## 下载路径
+
+```shell
+# nxinx-1.16.1
+wget http://nginx.org/download/nginx-1.16.1.tar.gz)
+
+# nginx-1.19.5
+wget http://nginx.org/download/nginx-1.19.5.tar.gz
+```
+
+## 编译参数
+
+### 1.16.1
 
 
-./configure  --prefix=/usr/local/nginx  --sbin-path=/usr/local/nginx/sbin/nginx --conf-path=/usr/local/nginx/conf/nginx.conf --error-log-path=/var/log/nginx/error.log  --http-log-path=/var/log/nginx/access.log  --pid-path=/var/run/nginx/nginx.pid --lock-path=/var/lock/nginx.lock  --user=nginx --group=nginx --with-http\_ssl\_module --with-http\_stub\_status\_module --with-http\_gzip\_static\_module --http-client-body-temp-path=/var/tmp/nginx/client/ --http-proxy-temp-path=/var/tmp/nginx/proxy/ --http-fastcgi-temp-path=/var/tmp/nginx/fcgi/ --http-uwsgi-temp-path=/var/tmp/nginx/uwsgi --http-scgi-temp-path=/var/tmp/nginx/scgi --with-pcre
+./configure  --prefix=/usr/local/ nginx-1.16.1  --sbin-path=/usr/local/ nginx-1.16.1/sbin/nginx --conf-path=/usr/local/ nginx-1.16.1/conf/nginx.conf --error-log-path=/var/log/nginx/error.log  --http-log-path=/var/log/nginx/access.log  --pid-path=/var/run/nginx/nginx.pid --lock-path=/var/lock/nginx.lock  --user=nginx --group=nginx --with-http\_ssl\_module --with-http\_stub\_status\_module --with-http\_gzip\_static\_module --http-client-body-temp-path=/var/tmp/nginx/client/ --http-proxy-temp-path=/var/tmp/nginx/proxy/ --http-fastcgi-temp-path=/var/tmp/nginx/fcgi/ --http-uwsgi-temp-path=/var/tmp/nginx/uwsgi --http-scgi-temp-path=/var/tmp/nginx/scgi --with-pcre --with-http_v2_module
 
-./configure  -—prefix=/root/nginx/ --with-http\_ssl\_module --with-http\_stub\_status\_module --with-http\_gzip\_static\_module --with-pcre
+### 1.19.5（支持http2）
+
+./configure  --prefix=/usr/local/nginx-1.19.5  --sbin-path=/usr/local/nginx-1.19.5/sbin/nginx --conf-path=/usr/local/nginx-1.19.5/conf/nginx.conf --error-log-path=/usr/local/nginx-1.19.5/logs/error.log  --http-log-path=/usr/local/nginx-1.19.5/logs/access.log  --pid-path=/usr/local/nginx-1.19.5/nginx.pid --lock-path=/usr/local/nginx-1.19.5/nginx.lock  --user=nginx --group=nginx --with-http\_ssl\_module --with-http\_stub\_status\_module --with-http\_gzip\_static\_module --http-client-body-temp-path=/var/tmp/nginx/client/ --http-proxy-temp-path=/var/tmp/nginx/proxy/ --http-fastcgi-temp-path=/usr/local/nginx-1.19.5/fastcgi-tmp/ --http-uwsgi-temp-path=/usr/local/nginx-1.19.5/uwsgi-tmpe --http-scgi-temp-path=/usr/local/nginx-1.19.5/scgi-tmp --with-pcre --with-http_v2_module --with-http_v2_module
+
