--- a/Computer/!Programming/Python/编译安装.md
+++ b/Computer/!Programming/Python/编译安装.md
@@ -1,6 +1,9 @@
 # 编译安装
 
-yum -→ install zlib-devel bzip2-devel openssl-devel ncurses-devel sqlite-devel readline-devel tk-devel gdbm-devel db4-devel libpcap-devel xz-devel
+```bash
+wget https://www.python.org/ftp/python/3.6.12/Python-3.6.12.tgz
+
+yum -y install zlib-devel bzip2-devel openssl-devel ncurses-devel sqlite-devel readline-devel tk-devel gdbm-devel db4-devel libpcap-devel xz-devel gcc
 
 ./configure --prefix=/usr/local/Python3.6/ --enable-optimizations --enable-loadable-sqlite-extensions --with-ssl --enable-shared
 --prefix :指定安装目录
@@ -9,3 +12,17 @@ yum -→ install zlib-devel bzip2-devel openssl-devel ncurses-devel sqlite-devel
 --with-ssl :开启ssl模块
 
 make -j `grep processor /proc/cpuinfo  | wc -l`
+make install
+
+```
+
+## 报错
+
+python3.6: error while loading shared libraries: libpython3.6m.so.1.0:cannot open shared object file: No such file or directory
+
+```bash
+[root@www Python-3.6.5]#  cp libpython3.6m.so.1.0 /usr/local/lib64/
+[root@www Python-3.6.5]#  cp libpython3.6m.so.1.0 /usr/lib/ 
+[root@www Python-3.6.5]#  cp libpython3.6m.so.1.0 /usr/lib64/
+```
+
