--- a/Computer/!System/Linux/免费证书.md
+++ b/Computer/!System/Linux/免费证书.md
@@ -2,3 +2,11 @@
 
 获取证书：`certbot certonly --standalone -d xunyang.monster -d test.xunyang.monster`
 
+注意：需要运行44、80端口
+
+运行结束后，nginx中，ssl_certificate对应fullchain1.pem（/etc/letsencrypt/archive/）。
+
+```php
+ssl_certificate /etc/letsencrypt/archive/xunyang.monster/fullchain1.pem
+ssl_certificate_key /etc/letsencrypt/archive/xunyang.monster/privkey1.pem
+```
