--- a/DataBase/!Oracle/!管理概念/用户/创建.md
+++ b/DataBase/!Oracle/!管理概念/用户/创建.md
@@ -34,35 +34,20 @@ to <username> identified by <password>;
 
 ## OS用户验证
 
-机制：能登录操作系统用户就能登录数据库，且无需数据库用户的密码验证
-
-
-
 将OS_AUTHENT_PREFIX设置为空，默认是OPS$，否则创建的用户名会带有OPS$前缀
 
 ```sql
 查看当前前缀
-SQL> show parameter os_authent_prefix;
+show parameter os_authent_prefix;
 
 修改为空
-SQL> alter system set os_authent_prefix='' scope=spfile;
-SQL> shutdown
-SQL> startup
+alter system set os_authent_prefix='' scope=spfile;
 ```
 
- 创建用户
+### 创建用户
 
 ```sql
-SQL> create user tengfei identified externally;
-SQL> grant create session to tengfei;
-```
-
-测试
-
-```bash
-# su - tengfei
-$ sqlplus /
-SQL> show user;
-USER is "TENGFEI"
+create user tengfei identified externally;
+grant create session to tengfei;
 ```
 
