--- a/DataBase/!Oracle/!管理概念/用户/解锁、锁定、更改.md
+++ b/DataBase/!Oracle/!管理概念/用户/解锁、锁定、更改.md
@@ -1,5 +1,3 @@
-
-
 ## 解锁
 
 ### 单个
@@ -32,7 +30,17 @@ from dba_users;
 select username,lock_date from dba_users where username='MONITOR';
 ```
 
+查看锁定的用户
 
+```sql
+select username form dba_users where lock_date is null;
+```
+
+查看没有锁定的用户
+
+```sql
+select username form dba_users where lock_date is not null;
+```
 
 ## 更改
 
