--- a/DataBase/!Oracle/!管理概念/目录对象/目录对象.md
+++ b/DataBase/!Oracle/!管理概念/目录对象/目录对象.md
@@ -21,13 +21,13 @@ select * from dba_directories;
 修改directory，要更改dumpdir目录的路径为/home/dumpfiles
 
 ```sql
-create or replace directory dumpdir as '/home/dumpfiles';
+create or replace directory <dumpdir> as '/home/dumpfiles';
 ```
 
 directory赋权
 
 ```sql
-grant read,write on directory dumpdir to username;
+grant read,write on directory <dumpdir> to username;
 ```
 
 directory删除
