--- a/DataBase/!Oracle/!管理概念/表/建表例句.md
+++ b/DataBase/!Oracle/!管理概念/表/建表例句.md
@@ -1,3 +1,5 @@
+## 堆表
+
 ```sql
 -- 创建一张学生表
 create table t_stu(  
@@ -23,3 +25,19 @@ create table t_score(
   on delete cascade
 ); 
 ```
+
+## 分区表
+
+```
+create table tbl_002 (
+ id1 number(5),
+ id2 number(5)
+)partition by range(id1) (
+ partition p0200 values less than ( 200),
+ partition p0400 values less than ( 400),
+ partition p0600 values less than ( 600),
+ partition p0800 values less than ( 800),
+ partition p1000 values less than (1000)
+);
+```
+
