--- a/DataBase/!Oracle/!管理概念/表空间/增加表空间文件.md
+++ b/DataBase/!Oracle/!管理概念/表空间/增加表空间文件.md
@@ -1,4 +1,4 @@
-## 增加表空间数据文件
+## 表空间
 
 ```sql
 ALTER TABLESPACE <tablespace_name> 
@@ -6,10 +6,10 @@ ADD datafile '/home/oracle/oradata/hbxtora/YSSUCO13.dbf'
 size 10g;
 ```
 
-## 增加temp表空间数据文件
+## temp表空间
 
 ```sql
-ALTER TABLESPACE TEMP45 
+ALTER TABLESPACE <tablespace_name> 
 ADD tempfile  '/home/oracle/oradata/hbxtora/TEMP45-2.dbf'  
 size 10g autoextend on;
 ```
