--- a/DataBase/!Oracle/!管理概念/表空间/更改表空间的数据文件尺寸.md
+++ b/DataBase/!Oracle/!管理概念/表空间/更改表空间的数据文件尺寸.md
@@ -12,7 +12,17 @@
 
 `alter database tempfile '<.dbf>' resize 500m`
 
-添加文件
+临时表空间添加文件
 
 `alter tablespace temp add tempfile '*.dbf' size 500m`
+
+表空间添加文件
+
+```
+alter tablespace  YSSUCO add file '/home/oracle/oradata/hbxtora/YSSUCO15.dbf' size 30g
+```
+
+
+
+
 
