--- a/DataBase/!Oracle/安装/单节点/12c.md
+++ b/DataBase/!Oracle/安装/单节点/12c.md
@@ -1,11 +1,3 @@
-```
-yum install -y compat-libcap1.x86_64 gcc.x86_64 gcc-c++.x86_64 glibc.x86_64 glibc-devel.x86_64 ksh libX11.x86_64 libXau.x86_64 libXi.x86_64 libXtst.x86_64 libaio.x86_64 libaio-devel.x86_64 libgcc.x86_64 libstdc++.x86_64 libstdc++.x86_64 libxcb.x86_64 make.x86_64 sysstat.x86_64
-```
-
-
-
-
-
 # 12c 静默安装
 
 ##  安装依赖
@@ -67,8 +59,9 @@ export PATH
 
 ### 系统参数
 
+
+
 ```shell
-# 编辑内核参数 并生效
 cat << EOF > /etc/sysctl.conf 
 fs.aio-max-nr = 1048576
 fs.file-max = 6815744
@@ -100,6 +93,14 @@ oracle   hard   stack    32768
 oracle   soft   memlock  50000000
 oracle   hard   memlock  50000000
 ```
+
+在/etc/pam.d/login下添加
+
+```
+session required pam_limits.so
+```
+
+这使得用户将加载PAM的pam_limits.so，设置用户登录的硬性设置
 
 ### 文件夹准备
 
