--- a/DataBase/!Oracle/常识与方法/查看.md
+++ b/DataBase/!Oracle/常识与方法/查看.md
@@ -61,3 +61,15 @@ select * from v$pwfile_users;
 archive log list
 ```
 
+查看所有数据库
+
+```sql
+select name from v$database; 
+```
+
+查看历史执行命令
+
+```
+select * from(select SQL_TEXT from v$sqlarea t where t.PARSING_SCHEMA_NAME in ('SYS') order by t.LAST_ACTIVE_TIME desc ) WHERE  rownum <10;
+```
+
