--- a/DataBase/OceanBase/连接.md
+++ b/DataBase/OceanBase/连接.md
@@ -4,3 +4,11 @@
 ./hap.py ob1.obmysql
 ```
 
+返回登录命令
+
+```
+./hap.py ob1.sql _dryrun_
+```
+
+[参考文档](https://www.oceanbase.com/docs/oceanbase-database-trial/oceanbase-database-trial/V2.2.50/pbvu42)
+
