--- a/DataBase/SQLServer/linux/防火墙.md
+++ b/DataBase/SQLServer/linux/防火墙.md
@@ -1,17 +1,11 @@
-## 1433/1434
+## Centos7
+
+端口：1433/1434
 
 若要允许远程连接，请在 RHEL 的防火墙上打开 SQL Server 端口。 默认的 SQL Server 端口为 TCP 1433。 如果为防火墙使用的是 **FirewallD**，则可以使用以下命令：
 
 ```bash
 sudo firewall-cmd --zone=public --add-port=1433/tcp --permanent
 sudo firewall-cmd --reload
-```
-
-## 本地连接
-
-使用 SQL Server 名称 (-S)，用户名 (-U) 和密码 (-P) 的参数运行 sqlcmd 。
-
-```bash
-sqlcmd -S localhost -U SA -P '<YourPassword>'
 ```
 
