--- a/Server/Iscsi/服务器安装与配置.md
+++ b/Server/Iscsi/服务器安装与配置.md
@@ -1,4 +1,5 @@
 [参考文档](https://blog.csdn.net/cuichongxin/article/details/103982207)
+
 ### 安装
 
 ```bash
@@ -101,6 +102,8 @@ loop0                  7:0    0  4.5G  1 loop /mnt/iso
 /> /backstores/block create DB1 /dev/vdb1
 /> /backstores/block create DB2 /dev/vdb2
 /> /backstores/block create DB3 /dev/vdb3
+# 删除方法
+# /backstores/block delete DB3
 ```
 
 ### 创建iscsi
