--- a/DataBase/!Oracle/!管理概念/表空间/查看剩余表空间.md
+++ b/DataBase/!Oracle/!管理概念/表空间/查看剩余表空间.md
@@ -1,6 +1,8 @@
 ## 查看剩余空间
 
+```sql
 select  round(sum(bytes) / 1024 / 1024/1024, 2) AS GB from dba_free_space where tablespace_name='YSSUCO';
+```
 
 ## 查看总空间
 
