--- a/DataBase/!Oracle/备份恢复/expdp、impdp/文件备份方法.md
+++ b/DataBase/!Oracle/备份恢复/expdp、impdp/文件备份方法.md
@@ -1,6 +1,8 @@
-# 执行导出
+# 导出数据
 
-### 使用参数方式
+## 文件方式
+
+### 创建目录对象
 
 创建数据库目录对象dp_dir
 
@@ -20,6 +22,8 @@ select owner,directory_name,directory_path from dba_directories;
 grant read,write on directory dp_dir to tengfei;
 ```
 
+### 使用参数方式
+
 进行备份数据
 
 ```sql
@@ -31,18 +35,42 @@ expdp tengfei/tengfei directory=dp_dir dumpfile=exp.dmp logfile=exp.log
 ```bash
 # 注:目录对象
 # 备份文件是否放在目录对象指定的路径中
-impdp tengfei/tengfei directory=dp_dir dumpfile=exp.dmp logfile=exp.log
+impdp tengfei/tengfei dirsysectory=dp_dir dumpfile=exp.dmp logfile=exp.log
 ```
 
 ### 使用文件方式
 
+编辑exp.par
+
 ```shell
-vi exp.par
 userid=tengfei/tengfei
 directory=dp_dir
 dumpfile=exp.dmp
 logfile=exp.log
+full=y
+```
 
+进行导出
+
+```
 impdp parfile=exp.par
 ```
+
+## 网络备份（未测试与完善）
+
+创建远程用户
+
+```sql
+create database link dk
+connect to darl identified by foobar
+using '192.168.245.2:1521/inst_oracle';
+```
+
+ 创建存储日志目录的目录对象
+
+```sql
+create or replace directory engdev as '/data/app/oracle/product/11.2.0/remotesave/';
+```
+
+注：dk所引用的用户darl是生产数据库的DBA权限用户
 
