--- a/OS/Linux/方法/压缩.md
+++ b/OS/Linux/方法/压缩.md
@@ -1,10 +1,24 @@
 ## zip
 
--r 指定输出文件名
+输出文件名sql.zip
 
 ```
 zip -r sql.zip ./*
 ```
+
+解压覆盖
+
+```
+unzip -o test.zip
+```
+
+压缩到指定目录
+
+```
+unzip -d /temp test.zip
+```
+
+
 
 ## rar
 
