--- a/DataBase/!Oracle/!管理概念/表/查看用户下的表.md
+++ b/DataBase/!Oracle/!管理概念/表/查看用户下的表.md
@@ -1,4 +1,12 @@
+在目标用户在查找当前表
+
 ```sql
 select * from user_table;
+```
+
+dba下根据目标用户查找
+
+```sql
+select table_name,TABLESPACE_NAME from dba_tables where OWNER='TENGFEI';
 ```
 
