--- a/DataBase/!Oracle/!管理概念/表空间/查看剩余表空间.md
+++ b/DataBase/!Oracle/!管理概念/表空间/查看剩余表空间.md
@@ -1,13 +1,11 @@
 ## 查看剩余空间
 
 ```sql
-select  round(sum(bytes) / 1024 / 1024/1024, 2) AS GB from dba_free_space where tablespace_name='YSSUCO';
+select  round(sum(bytes) / 1024 / 1024/1024, 2) AS GB from dba_free_space where tablespace_name='TRAN_TS';
 ```
 
 ## 查看总空间
 
 ```sql
-select tablespace_name, sum(bytes) / 1024 / 1024 as MB 
-from dba_data_files 
-group by tablespace_name;
+select tablespace_name, sum(bytes) / 1024 / 1024 as MB from dba_data_files where tablespace_name='TRAN_TS';
 ```
