--- a/DataBase/!Oracle/备份恢复/expdp、impdp/参数/备份级别.md
+++ b/DataBase/!Oracle/备份恢复/expdp、impdp/参数/备份级别.md
@@ -4,7 +4,7 @@
 
 提示信息："TENGFEI"."SYS_EXPORT_FULL_01"
 
-重建表空间、用户、表、缩影、约束、触发器、序列、已储存的PL/SQL脚本等元素的DLL代码
+重建表空间、用户、索引、约束、触发器、序列、已储存的PL/SQL脚本等元素的DLL代码
 
 所有表的数据（除了SYS用户的表）
 
