--- a/DataBase/!Oracle/安装/单节点/11g.md
+++ b/DataBase/!Oracle/安装/单节点/11g.md
@@ -7,7 +7,7 @@
 本地系统镜像中包含的
 
 ```
-binutils.x86_64 compat-libcap1.x86_64 gcc.x86_64 gcc-c++.x86_64 glibc.i686 glibc.x86_64 glibc-devel.i686 glibc-devel.x86_64 libaio.i686 libaio.x86_64 libaio-devel.i686 libaio-devel.x86_64 libgcc.i686 libgcc.x86_64 libstdc++.i686 libstdc++.x86_64 libstdc++-devel.i686 libstdc++-devel.x86_64 libXi.i686 libXi.x86_64 libXtst.i686 libXtst.x86_64 make.x86_64 sysstat.x86_64 compat-libstdc++-33 elfutils-libelf-devel unzip
+binutils.x86_64 compat-libcap1.x86_64 gcc.x86_64 gcc-c++.x86_64 glibc.x86_64 glibc-devel.x86_64 libaio.x86_64 libaio-devel.x86_64 libgcc.x86_64 libstdc++.x86_64 libstdc++-devel.x86_64 libXi.x86_64 libXtst.x86_64 make.x86_64 sysstat.x86_64 elfutils-libelf-devel unzip
 ```
 
 额外需要
@@ -31,22 +31,18 @@ groupadd racdba
 groupadd oper
 useradd -g oinstall -G oper,dba,backupdba,dgdba,kmdba,racdba -d /home/oracle oracle
 echo "oracle" | passwd oracle --stdin
-
-#usermod -g oinstall -G oper,dba,backupdba,dgdba,kmdba,racdba oracle
 ```
 
 ### 变量
 
-编辑~/.bash_profile
+编辑oracle用户的~/.bash_profile
 
 ```shell
 export ORACLE_BASE=/u01/app/oracle
 export ORACLE_HOME=/u01/app/oracle/product/11.2.0/db_1
 export ORACLE_SID=oracle
-
-# sqlplus 使用的一些.so文件
-export LD_LIBRARY_PATH=/u01/app/oracle/product/11.2.0/db_1/stage/ext/lib
-PATH=$PATH:$HOME/.local/bin:$HOME/bin:$ORACLE_HOME/bin
+export LD_LIBRARY_PATH=$ORACLE_HOME/stage/ext/lib
+PATH=$PATH:$ORACLE_HOME/bin
 export PATH
 ```
 
