--- a/DataBase/!Oracle/!管理概念/归档日志/说明.md
+++ b/DataBase/!Oracle/!管理概念/归档日志/说明.md
@@ -22,6 +22,8 @@ sql> shutdown;
 SQL> startup
 ```
 
+
+
 ## 查看归档日志
 
 查看归档日志位置
@@ -34,21 +36,18 @@ SQL> show parameter archive log;
 
 [参考文档](https://www.cnblogs.com/qzqdy/p/9596554.html)
 
-```
-select * from v$recovery_file_dest; 
-```
 
-查看DB_RECOVERY_FILE_DEST位置
+
+## 修改归档日志位置
 
 ```sql
-SQL> show parameter db_recovery 
-
-NAME				     TYPE	 VALUE
------------------------------------- ----------- ------------------------------
-db_recovery_file_dest		     string	 /u01/app/oracle/fast_recovery_area
-db_recovery_file_dest_size	     big integer 4182M
-SQL> 
+SQL> alter system set log_archive_dest_1='location=/u01/app/oracle/archive';
+System altered.  
 ```
+
+注：该路径需要oracle的权限
+
+
 
 ## 查看归档格式
 
@@ -75,13 +74,4 @@ log_archive_format                   string      %t_%s_%r.dbf
 
 %r表示重置日志的ID(RESETLOGS ID)
 
-
-## 修改归档日志位置
-
-```sql
-SQL> alter system set log_archive_dest_1='location=/u01/app/oracle/archive';
-System altered.  
-```
-
-需重启实例
 
