--- a/DataBase/!Oracle/!管理概念/表空间/自动扩展.md
+++ b/DataBase/!Oracle/!管理概念/表空间/自动扩展.md
@@ -1,6 +1,18 @@
+查看自动增长
+
+```sql
+SELECT AUTOEXTENSIBLE FROM DBA_DATA_FILES;
+```
+
 开启表空间自动扩展功能 
 
+```sql
+alter database datafile '/u01/app/oracle/xy.dbf' autoextend on; 
 ```
-alter database datafile '/u01/app/oracle/oradata/sktest/skuser.dbf' autoextend on; 
+
+关闭表空间自动扩展
+
+```sql
+alter database datafile '/u01/app/oracle/xy.dbf' autoextend off; 
 ```
 
