--- a/DataBase/!Oracle/RAC/启动和停止.md
+++ b/DataBase/!Oracle/RAC/启动和停止.md
@@ -2,12 +2,17 @@
 
 集群启动、停止命令
 
-在每个节点用root用户直接关闭并启动集群
+## 所有节点
 
 ```
-# 关得快
 [root@ora1 ~]# crsctl stop cluster -all
-# 启动慢
 [root@ora1 ~]# crsctl start cluster -all
+```
+
+## 单个节点
+
+```
+[root@ora1 ~]# crsctl stop crs
+[root@ora1 ~]# crsctl start crs
 ```
 
