--- a/DataBase/!Oracle/RAC/安装/11g.md
+++ b/DataBase/!Oracle/RAC/安装/11g.md
@@ -10,18 +10,19 @@ rpm、安装包保存于[百度网盘](https://pan.baidu.com/s/1KEb2QFoM4rlNHJOq
 
 注：该编辑文档软件会把用户和密码首字母自动大写，其实为小写。
 
-|              | 节点一                                       | 节点二                                       |
-|:------------:|:-----------------------------------------:|:-----------------------------------------:|
-| 主机名          | ora1                                      | ora2                                      |
-| 操作系统         | Centos7.8                                 | Centos7.8                                 |
-| grid用户名/密码   | grid                                      | grid                                      |
-| Oracle用户名/密码 | oracle                                    | oracle                                    |
-| Oracle 版本    | 11g Enterprise Edition Release 11.2.0.4.0 | 11g Enterprise Edition Release 11.2.0.4.0 |
-| oracle用户SID  | rac1                                      | rac2                                      |
-| GI安装位置       | /u01/app/grid/base                        | /u01/app/grid/base                        |
-| 数据库安装位置      | /u01/app/oracle/base                      | /u01/app/oracle/base                      |
-| 公网IP         | 192.168.3.64/21                           | 192.168.3.65/21                           |
-| 私网IP         | 192.168.122.2/24                          | 192.168.122.3/24                          |
+|                   |                  节点一                   |                  节点二                   |
+| :---------------: | :---------------------------------------: | :---------------------------------------: |
+|      主机名       |                   ora1                    |                   ora2                    |
+|     操作系统      |                 Centos7.8                 |                 Centos7.8                 |
+|  grid用户名/密码  |                   grid                    |                   grid                    |
+| Oracle用户名/密码 |                  oracle                   |                  oracle                   |
+|    Oracle 版本    | 11g Enterprise Edition Release 11.2.0.4.0 | 11g Enterprise Edition Release 11.2.0.4.0 |
+|   oracle用户SID   |                   rac1                    |                   rac2                    |
+|    grid用户SID    |                   +ASM1                   |                   +ASM2                   |
+|    GI安装位置     |            /u01/app/grid/base             |            /u01/app/grid/base             |
+|  数据库安装位置   |           /u01/app/oracle/base            |           /u01/app/oracle/base            |
+|      公网IP       |              192.168.3.64/21              |              192.168.3.65/21              |
+|      私网IP       |             192.168.122.2/24              |             192.168.122.3/24              |
 
 需要的文件
 
@@ -604,7 +605,7 @@ rpm -ivh rpm/cvuqdisk-1.0.9-1.rpm
 
 8. 检查
    
-   此时查看`multipath -v3 | grep "not in wwids file, skipping sdd" `，没有报错。
+   此时查看`multipath -v3 | grep "not in wwids file, skipping" `，没有报错。
    
    查看
    
@@ -687,6 +688,8 @@ rpm -ivh rpm/cvuqdisk-1.0.9-1.rpm
    [root@ora1 rules.d]# ll /dev/dm-5
    brw-rw---- 1 grid asmadmin 253, 5 7月   4 14:06 /dev/dm-5
    ```
+
+
 
 # 三、安装Grid Infrastructure
 
@@ -1047,15 +1050,23 @@ sshsetup/sshUserSetup.sh -hosts "ora1 ora2" -user grid -advanced -noPromptPassph
    
    注：不要输出`........94% Done`和`Setup files successful.`作为安装结束的标志，多等一会。。每个节点的文件大小基本相同，刚出这两条日志时，节点二还没达到4.2G的大小
 
-4. 使用root用户执行root.sh脚本
-   
+4. HAIP：如果使用云服务器搭建，最好关闭HAIP，否则会造成无法连接节点的169.254地址，节点二的+ASM2实例无法启动
+
+   ```
+   export HAIP_UNSUPPORTED=YES
+   ```
+
+5. 使用root用户执行root.sh脚本
+
    ```
    /u01/app/oracle/product/11.2.0/db_1/root.sh
    ```
 
+   
+
 ## 创建磁盘组(grid用户)
 
-1. 以grid用户进入SQLPLUS，其中==ORALCE_SID=+ASM1==
+1. 以grid用户进入SQLPLUS，其中节点1的ORALCE_SID=+ASM1，节点二的ORALCE_SID=+ASM2
    
    ```
     sqlplus / as sysasm
