--- a/DataBase/!Oracle/快速执行/开始.md
+++ b/DataBase/!Oracle/快速执行/开始.md
@@ -1,7 +1,9 @@
 ```sql
 -- 建立表空间
 -- create tablespace xy datafile 'C:\app\Administrator\oradata\xy.dbf' size 10m extent management local uniform size 128k segment space management auto nologging;
-create tablespace xy datafile '/u01/app/oracle/xy.dbf' size 10m extent management local uniform size 128k segment space management auto nologging;
+
+-- 自动扩展
+create tablespace xy datafile '/u01/app/oracle/xy.dbf' size 10m autoextend on next 10m extent management local uniform size 128k segment space management auto nologging;
 
 -- 建立、赋权用户
 create user tengfei identified by tengfei default tablespace xy quota unlimited on xy;
