--- a/OS/Centos/yum/手动挂载.md
+++ b/OS/Centos/yum/手动挂载.md
@@ -1,8 +1,16 @@
-```shell
-mkdir /mnt/iso
-mount -o loop /dev/sr0/ !$
-vi /etc/yum.repos.d/local.repo
+挂载命令
 
+```bash
+mkdir /mnt/iso
+# CD挂载
+mount -o loop /dev/sr0 /mnt/iso
+# 系统镜像挂载
+mount -o loop *.iso /mnt/iso
+```
+
+编辑/etc/yum.repos.d/local.repo
+
+```shell
 [local]
 name=local
 # baseurl是挂载目录
